test/parse-errors/need-block-context.nz
f void()
	if if
		0
	else
		1
	match match
	as some
		0
	as none
		1
	match \
